syntax = "proto3";

package moooodotfarm.grpc;

service MoooodotfarmService {
  rpc GetHerd (GetHerdRequest) returns (GetHerdResponse);
  rpc AddCow (AddCowRequest) returns (AddCowResponse);
  rpc ChangeCowCharacter (ChangeCowCharacterRequest) returns (ChangeCowCharacterResponse);
}

message GetHerdRequest {}

message GetHerdResponse {
  Herd herd = 1;
}

message Herd {
  repeated Cow cows = 1;
}

message Cow {
  string name = 1;
  string character = 2;
  string last_seen = 3;
  string status = 4;
}

message AddCowRequest {
  string name = 1;
  string character = 2;
}

message AddCowResponse {}

message ChangeCowCharacterRequest {
  string name = 1;
  string character = 2;
}

message ChangeCowCharacterResponse {}
